# clipshot

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Info.plist  Makefile  README.md
src/: actions.rs  app.rs  border.rs  capture.rs  encoder.rs  hotkey.rs  main.rs  recording.rs  screen.rs  scroll.rs  scroll_capture.rs  statusbar.rs  stitch.rs
src/annotation/: mod.rs  model.rs  renderer.rs  text_input.rs
src/editor/: decoder.rs  export.rs  minibar.rs  mod.rs  model.rs  view.rs  window.rs
src/overlay/: mod.rs  view.rs  window.rs
src/toolbar/: mod.rs  view.rs  window.rs
