[package]
name = "screenshot-app"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSDictionary", "NSThread", "NSRunLoop", "NSDate", "NSTimer", "NSArray", "NSValue", "NSAttributedString", "NSURL", "NSError", "NSObject"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSMenu",
    "NSMenuItem",
    "NSWindow",
    "NSView",
    "NSPanel",
    "NSScreen",
    "NSEvent",
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSTextField",
    "NSColor",
    "NSCursor",
    "NSGraphicsContext",
    "NSSavePanel",
    "NSPasteboard",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSButtonCell",
    "NSActionCell",
    "NSTrackingArea",
    "NSFont",
    "NSText",
    "NSBezierPath",
    "NSAlert",
    "NSSlider",
    "NSSliderCell",
    "NSGestureRecognizer",
    "NSClickGestureRecognizer",
    "NSColorPanel",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGContext",
    "CGImage",
    "CGColorSpace",
    "CGGeometry",
    "CGWindowLevel",
    "CGWindow",
    "CGDirectDisplay",
    "CGError",
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFCGTypes",
    "CFString",
    "CFArray",
    "CFDictionary",
    "CFNumber",
] }
global-hotkey = "0.7"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
block2 = "0.6"
objc2-av-foundation = { version = "0.3", features = [
    "AVAssetWriter",
    "AVAssetWriterInput",
    "AVMediaFormat",
    "AVVideoSettings",
    "AVAsset",
    "AVAssetReader",
    "AVAssetReaderOutput",
    "AVAssetTrack",
    "block2",
    "objc2-core-media",
    "objc2-core-video",
] }
objc2-core-media = { version = "0.3", features = [
    "CMTime",
    "CMSampleBuffer",
    "CMFormatDescription",
    "objc2-core-video",
] }
objc2-core-video = { version = "0.3", features = [
    "CVBase",
    "CVPixelBuffer",
    "CVPixelBufferPool",
    "CVBuffer",
    "CVImageBuffer",
    "CVReturn",
    "CVPixelFormatDescription",
] }
